--- a/public/stat230/lecture_notes/Day2.html
+++ b/public/stat230/lecture_notes/Day2.html
@@ -74,7 +74,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_624473e7" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62447b11" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -538,7 +538,7 @@ Please download the class activity 2 .Rmd file from [moodle](https://moodle.carl
 
 &gt; Make a boxplot and faceted histograms as you were shown in the previous slides.
 
-<div class="countdown" id="timer_6244735c" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_624478f5" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -558,7 +558,7 @@ Discuss how would you answer these questions with your group.
 - How do the summary stats change when this county is omitted?
 ]
 
-<div class="countdown" id="timer_624473ba" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62447b19" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -685,7 +685,7 @@ class: action, middle
 
 &gt;  Do the average number of farms per county differ in the western and north central regions in 1992?
 
-<div class="countdown" id="timer_624472c0" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_624478c6" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
