--- a/public/stat120/lecture_notes/Day2.html
+++ b/public/stat120/lecture_notes/Day2.html
@@ -200,7 +200,7 @@ class: action, middle
 ]
 ]
 
-<div class="countdown" id="timer_62447775" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_624476a7" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -283,7 +283,7 @@ Go over the abstract of this [study](https://onlinelibrary.wiley.com/doi/abs/10.
 &lt;/center&gt;
 
 
-<div class="countdown" id="timer_62447726" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62447694" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">03</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -338,7 +338,7 @@ class: action
 - CNN poll: Driving with a Pet on your Lap
 
 
-<div class="countdown" id="timer_62447791" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62447785" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
