--- a/public/courses/stat230/index.html
+++ b/public/courses/stat230/index.html
@@ -700,6 +700,10 @@
       
 
 
+  <li class=""><a href="/courses/stat230/week2/">Week 2</a></li>
+
+
+
   <li class=""><a href="/courses/stat230/week1/">Week 1</a></li>
 
       
