--- a/public/stat120/lecture_notes/Day5.html
+++ b/public/stat120/lecture_notes/Day5.html
@@ -48,7 +48,7 @@ class: title-slide, middle
 background-position: 10% 90%, 100% 50%
 background-size: 160px, 100% 100%
 
-# .fancy[Describing Categorical Variables]
+# .fancy[Describing Quantitative Variables]
 
 ### .fancy[Stat 120]
 
@@ -88,6 +88,7 @@ class: middle
 ]
 
 ---
+
 class: middle
 
 # Distribution 
@@ -175,9 +176,6 @@ The SD of pulse rates for this sample of students is `\(s = 12.2\)` beats per mi
 ---
 
 
-
----
-
 class: action
 
 # &lt;i class="fa fa-pencil-square-o" style="font-size:48px;color:purple"&gt;&amp;nbsp;Your&amp;nbsp;Turn&amp;nbsp;1&lt;/i&gt;    
@@ -197,7 +195,7 @@ Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_624daf6d" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_624e1632" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -207,7 +205,7 @@ Feel free to talk to your neighbor
 
 .blockquote-list[
 - Missing data values in R are coded as `NA` values
-- Many basic statistic functions in R return an NA value if variable has any missing values
+- Many basic statistic functions in R return an `NA` value if variable has any missing values
 ]
 
 --
@@ -531,7 +529,7 @@ sd(survey$Pulse)
 
 class: middle
 
-# Shape: Right skew
+# Shape
 
 .blockquote-list[If a distribution of data is .bold[approximately bell-shaped], about 95% of the data should fall within two standard deviations of the sample mean.
 
@@ -542,7 +540,7 @@ class: middle
 
 ---
 
-# Shape: Right skew
+# Shape
 
 
 
@@ -776,7 +774,7 @@ Go over the remaining portion of in class activity and let me know if you have a
 ]
 ]
 
-<div class="countdown" id="timer_624daf99" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_624e161b" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
