--- a/static/stat230/lecture_notes/Day5.html
+++ b/static/stat230/lecture_notes/Day5.html
@@ -126,7 +126,7 @@ Reframe the theoretical model:
 
 `$$\epsilon_{i}=Y_{i}-\left(\beta_{0}+\beta_{1} x_{i}\right) \quad \epsilon_{i} \sim N(0, \sigma)$$`
 .blockquote-list[ `\(\epsilon_{i}\)` are the key!
-- mean and SD don't depend on `\(x\)`,
+- mean and SD don't depend on `\(x\)`
 - normally distributed
 - and independent!
 ]
@@ -1163,7 +1163,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_624db43f" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_624e174d" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
