--- a/public/stat120/lecture_notes/Day7.html
+++ b/public/stat120/lecture_notes/Day7.html
@@ -255,10 +255,10 @@ d. 1.5
 
 # Recall:  Gettysburg Address
 
-.yellow-h[What are each dots?]
+.yellow-h.font80[What are each dots?]
 
 &lt;center&gt;
-&lt;img src="images/gettys.png" width="50%" height="45%"&gt;&lt;br&gt;
+&lt;img src="images/gettys.png" width="45%" height="45%"&gt;&lt;br&gt;
 &lt;/center&gt;
 
 
@@ -539,7 +539,7 @@ Go to our class [moodle](https://moodle.carleton.edu), go to the in class activi
 ]
 ]
 
-<div class="countdown" id="timer_6253cdf5" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62543be9" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
     </textarea>
