--- a/static/stat230/lecture_notes/Day7.html
+++ b/static/stat230/lecture_notes/Day7.html
@@ -111,7 +111,6 @@ stopping distance of cars in 1920s but don't have the speeds.
 - How much variability?
 ]
 
-&lt;br&gt;
 
 .blockquote[
 Stopping distances range from about 0 feet
@@ -186,11 +185,11 @@ variance is about 236.5 `\(feet^2\)`
 
 # R-squared
 
-.blockquote[
+.blockquote.font80[
 R-squared ( `\(R^2\)` or coefficient of determination) measures the proportion of variability observed in the response Y which can be explained by the regression of Y on x.
 ]
 
-.code70[
+.code50[
 
 ```r
 summary(cars_lm)
@@ -1012,10 +1011,12 @@ ggplot(reg_points_cars, aes(x = speed, y = dist)) +
 
 .blockquote[
 R-squared ( `\(R^2\)` or coefficient of determination) measures the proportion of variability observed in the response Y which can be explained by the regression of Y on x.
-]
+
 
 
 `$$R^{2}=\frac{\text { explained variation }}{\text { total variation }}=\frac{S S r e g}{S S T}$$`
+]
+
 
 .blockquote[
 - In terms of &lt;cite&gt;unexplained&lt;/cite&gt; (residual) variation:
@@ -1055,7 +1056,6 @@ Here is how the summary reported `\(R^{2}\)` of `\(65 \%\)` was calculated:
 
 
 ---
-
 
 count: false
  
@@ -1167,7 +1167,6 @@ ggplot(energy, aes(x = SqftMeasure, y = CostTotal)) +
   font-size: 60%
 }
 &lt;/style&gt;
-
 
 
 
@@ -1592,7 +1591,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_6253d226" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_62543d82" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
